# dolang.py

./: .gitignore  README.md  grammar.ipynb  index.html  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  mkdocs.yml  publish_pypi.yml  publish_to_test_pypi.yml  pythonpackage.yml
conda/: meta.yaml
dolang/: __init__.py  codegen.py  factory.py  function_compiler.py  grammar.lark  grammar.py  language.py  latex.py  objects.py  pattern.py  symbolic.py  symbolic_old.py  symbols.py  triangular_solver.py  vectorize.py  version.py  yaml_tools.py
dolang/tests/: consumption_savings.dot  portfolio.dot  rbc.dot  syntax_errors.yaml  test_compiler.py  test_latex.py  test_patterns.py  test_symbolic.py  test_symbols.py  test_syntax_errors.py  test_yaml_tools.py
experiments/: parse_portfolio.py  portfolio.yaml
experiments/pres/: consumption_savings_2.dot  graph.html  index.html
