[tool.poetry]
name = "dolang"
version = "0.0.20"
description = "Dolo Modeling Language"
readme = "README.md"
authors = ["Winant Pablo <pablo.winant@gmail.com>"]
license="BSD-2-Clause"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.22.2"
sympy = "^1.11.1"
lark = "^1.1.2"
pytest = "^7.1.3"
PyYAML = "^6.0"
numba = {version = "^0.57.1", optional = true}

[tool.poetry.extras]
compile = ['numba']

[tool.poetry.dev-dependencies]
black = "^22.8.0"
pylint = "^2.6.0"
mkdocs = "^1.1.2"
ipython = "^7.18.1"
ipykernel = "^5.3.4"
coverage = "^5.3"
pytest-cov = "^2.10.1"
numba = "^0.57.1"

[build-system]
requires = ["poetry>=1.2.1"]
build-backend = "poetry.masonry.api"
