[tool.poetry]
name = "dolang"
version = "0.0.21"
description = "Dolo Modeling Language"
readme = "README.md"
authors = ["Winant Pablo <pablo.winant@gmail.com>"]
license="BSD-2-Clause"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = ">=2.0.0"
sympy = "^1.12.1"
lark = "^1.1.2"
PyYAML = "^6.0"
numba = {version = "^0.60.0", optional = true}

[tool.poetry.extras]
compile = ['numba']

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^24.3.0"
pylint = "^2.6.0"
mkdocs = "^1.1.2"
ipython = "^8.10.1"
ipykernel = "^5.3.4"
coverage = "^5.3"
pytest-cov = "^2.10.1"
numba = "^0.60.0"

[build-system]
requires = ["poetry>=1.8"]
build-backend = "poetry.masonry.api"
